Add specific error handling to result POST route
Corrected schemas for error and success in API docs as well.
